@@ -1,5 +1,6 @@
 package open.dolphin.delegater;
 
+import java.lang.reflect.InvocationTargetException;
 import open.dolphin.project.Project;
 
 /**
@@ -28,8 +29,9 @@ public class OrcaDelegaterFactory {
     
     private static Object create(String clsName) {
         try {
-            return Class.forName(clsName).newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException ex) {
+            return Class.forName(clsName).getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException 
+                | NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException ex) {
             ex.printStackTrace(System.err);
         }
         return null;
